--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,7 +28,8 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".AddPhoto" />
-        <activity android:name=".ViewPhoto"></activity>
+        <activity android:name=".ViewPhoto" />
+        <activity android:name=".PictureDraw"></activity>
     </application>
 
 </manifest>
